@@ -6,3 +6,4 @@ xcuserdata/
 Build
 build
 *.gz
+google-toolbox-for-mac/
